--- a/app/styles/components.scss
+++ b/app/styles/components.scss
@@ -1,4 +1,21 @@
 
-.warmup { background: $warmup;}
-.gofast {background: $gofast;}
-.goslow {background: $goslow;}
+.warmup > div { background: $warmup;}
+.gofast > div {background: $gofast;}
+.goslow > div, #bottom.goslow {background: $goslow;}
+
+
+h1,h2,h3,h4 { margin: 0; padding: 0; font-weight: light; }
+
+// Interval Sets Controller
+
+i {margin: 0 .2em;}
+
+
+#middle {
+    .label {
+        text-transform: uppercase;
+        font-size: 5vw;
+        font-weight: bold;
+        }
+    .time { font-weight: 100; font-size: 10vw;}
+    }
