AHHHH ADD INTERVAL SETS IS WORKING!!! AAAHHHH

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="interval-sets" ng-repeat="i in getSet(sets) track by $index">
+            <div class="interval-sets" ng-repeat="i in getSet(set) track by $index">
                 <div class=" column gofast">
                     <div class="header">
                         <span class="label">Go Fast</span>
