Countdown Bar Added

--- a/app/styles/frame.scss
+++ b/app/styles/frame.scss
@@ -36,6 +36,10 @@
     }
     .countdown {
         height: 52vh;
+        position: relative;
+        .countdown-bar { position: absolute; left: 0; right: 0; top: 0; bottom: 2.8vw; }
+        .time { position: absolute; left:0; width: 100%;}
+
     }
 }
 
