--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,6 +20,7 @@
                     <span class="label">Warm-Up</span>
                 </div>
                 <div class="countdown">
+                    <div class="countdown-bar"></div>
                     <span class="time">12m0s</span>
                 </div>
             </div>
@@ -29,7 +30,10 @@
                     <div class="header">
                         <span class="label">Go Fast</span>
                     </div>
+
+
                     <div class="countdown">
+                        <div class="countdown-bar"></div>
                         <span class="time">3m0s</span>
                     </div>
                 </div>
@@ -38,6 +42,7 @@
                         <span class="label">Go Slow</span>
                     </div>
                     <div class="countdown">
+                        <div class="countdown-bar"></div>
                         <span class="time">3m0s</span>
                     </div>
                 </div>
