--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -3319,9 +3319,24 @@ button {
 /* line 37, ../../app/styles/frame.scss */
 .column .countdown {
   height: 52vh;
+  position: relative;
+}
+/* line 40, ../../app/styles/frame.scss */
+.column .countdown .countdown-bar {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 2.8vw;
+}
+/* line 41, ../../app/styles/frame.scss */
+.column .countdown .time {
+  position: absolute;
+  left: 0;
+  width: 100%;
 }
 
-/* line 44, ../../app/styles/frame.scss */
+/* line 48, ../../app/styles/frame.scss */
 #bottom {
   height: 10vh;
   position: absolute;
@@ -3330,39 +3345,75 @@ button {
   padding-top: 2vh;
   box-sizing: border-box;
 }
-/* line 51, ../../app/styles/frame.scss */
+/* line 55, ../../app/styles/frame.scss */
 #bottom .label {
   font-size: 7vw;
 }
 
 /* line 20, ../../app/styles/variables.scss */
+.warmup span {
+  text-shadow: 0 2px 5px #055f4c;
+}
+/* line 21, ../../app/styles/variables.scss */
+.warmup span.time {
+  text-shadow: 0 3px 5px #055f4c;
+}
+/* line 23, ../../app/styles/variables.scss */
 .warmup .header {
   background: #08A886;
 }
-/* line 21, ../../app/styles/variables.scss */
+/* line 25, ../../app/styles/variables.scss */
 .warmup .countdown {
   background: #0F6443;
   box-shadow: inset -1.4vw 0 0 #00C578, inset 1.4vw 0 0 #00C578, inset 0 -1.4vw 0 #00C578, inset 0 1.4vw 0 #00C578;
 }
+/* line 28, ../../app/styles/variables.scss */
+.warmup .countdown .countdown-bar {
+  background: -webkit-linear-gradient(#08A886, #00C578);
+}
 
 /* line 20, ../../app/styles/variables.scss */
+.gofast span {
+  text-shadow: 0 2px 5px #b48209;
+}
+/* line 21, ../../app/styles/variables.scss */
+.gofast span.time {
+  text-shadow: 0 3px 5px #b48209;
+}
+/* line 23, ../../app/styles/variables.scss */
 .gofast .header {
   background: #F3B217;
 }
-/* line 21, ../../app/styles/variables.scss */
+/* line 25, ../../app/styles/variables.scss */
 .gofast .countdown {
   background: #796D1E;
   box-shadow: inset -1.4vw 0 0 #F6D922, inset 1.4vw 0 0 #F6D922, inset 0 -1.4vw 0 #F6D922, inset 0 1.4vw 0 #F6D922;
 }
+/* line 28, ../../app/styles/variables.scss */
+.gofast .countdown .countdown-bar {
+  background: -webkit-linear-gradient(#F3B217, #F6D922);
+}
 
 /* line 20, ../../app/styles/variables.scss */
+.goslow span {
+  text-shadow: 0 2px 5px #0b5e8a;
+}
+/* line 21, ../../app/styles/variables.scss */
+.goslow span.time {
+  text-shadow: 0 3px 5px #0b5e8a;
+}
+/* line 23, ../../app/styles/variables.scss */
 .goslow .header {
   background: #108ED1;
 }
-/* line 21, ../../app/styles/variables.scss */
+/* line 25, ../../app/styles/variables.scss */
 .goslow .countdown {
   background: #0F6375;
   box-shadow: inset -1.4vw 0 0 #00C3EC, inset 1.4vw 0 0 #00C3EC, inset 0 -1.4vw 0 #00C3EC, inset 0 1.4vw 0 #00C3EC;
+}
+/* line 28, ../../app/styles/variables.scss */
+.goslow .countdown .countdown-bar {
+  background: -webkit-linear-gradient(#108ED1, #00C3EC);
 }
 
 /* line 6, ../../app/styles/components.scss */
