--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -3351,68 +3351,68 @@ button {
 }
 
 /* line 20, ../../app/styles/variables.scss */
-.warmup span {
+.warm-up span, .cool-down span {
   text-shadow: 0 2px 5px #055f4c;
 }
 /* line 21, ../../app/styles/variables.scss */
-.warmup span.time {
+.warm-up span.time, .cool-down span.time {
   text-shadow: 0 3px 5px #055f4c;
 }
 /* line 23, ../../app/styles/variables.scss */
-.warmup .header {
+.warm-up .header, .cool-down .header {
   background: #08A886;
 }
 /* line 25, ../../app/styles/variables.scss */
-.warmup .countdown {
+.warm-up .countdown, .cool-down .countdown {
   background: #0F6443;
   box-shadow: inset -1.4vw 0 0 #00C578, inset 1.4vw 0 0 #00C578, inset 0 -1.4vw 0 #00C578, inset 0 1.4vw 0 #00C578;
 }
 /* line 28, ../../app/styles/variables.scss */
-.warmup .countdown .countdown-bar {
+.warm-up .countdown .countdown-bar, .cool-down .countdown .countdown-bar {
   background: -webkit-linear-gradient(#08A886, #00C578);
 }
 
 /* line 20, ../../app/styles/variables.scss */
-.gofast span {
+.speedup span {
   text-shadow: 0 2px 5px #b48209;
 }
 /* line 21, ../../app/styles/variables.scss */
-.gofast span.time {
+.speedup span.time {
   text-shadow: 0 3px 5px #b48209;
 }
 /* line 23, ../../app/styles/variables.scss */
-.gofast .header {
+.speedup .header {
   background: #F3B217;
 }
 /* line 25, ../../app/styles/variables.scss */
-.gofast .countdown {
+.speedup .countdown {
   background: #796D1E;
   box-shadow: inset -1.4vw 0 0 #F6D922, inset 1.4vw 0 0 #F6D922, inset 0 -1.4vw 0 #F6D922, inset 0 1.4vw 0 #F6D922;
 }
 /* line 28, ../../app/styles/variables.scss */
-.gofast .countdown .countdown-bar {
+.speedup .countdown .countdown-bar {
   background: -webkit-linear-gradient(#F3B217, #F6D922);
 }
 
 /* line 20, ../../app/styles/variables.scss */
-.goslow span {
+.slowdown span {
   text-shadow: 0 2px 5px #0b5e8a;
 }
 /* line 21, ../../app/styles/variables.scss */
-.goslow span.time {
+.slowdown span.time {
   text-shadow: 0 3px 5px #0b5e8a;
 }
 /* line 23, ../../app/styles/variables.scss */
-.goslow .header {
+.slowdown .header {
   background: #108ED1;
 }
 /* line 25, ../../app/styles/variables.scss */
-.goslow .countdown {
+.slowdown .countdown {
   background: #0F6375;
   box-shadow: inset -1.4vw 0 0 #00C3EC, inset 1.4vw 0 0 #00C3EC, inset 0 -1.4vw 0 #00C3EC, inset 0 1.4vw 0 #00C3EC;
 }
 /* line 28, ../../app/styles/variables.scss */
-.goslow .countdown .countdown-bar {
+.slowdown .countdown .countdown-bar {
   background: -webkit-linear-gradient(#108ED1, #00C3EC);
 }
 
