--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="countdown">
                     <div class="countdown-bar"></div>
-                    <a class="time" href="/#/settime">{{appSets[$index].duration}}</a>
+                    <a class="time" href="/#/settime">{{set.duration}}</a>
                 </div>
 
 
