--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -3269,59 +3269,65 @@ button {
   background: #818181;
 }
 
-/* line 6, ../../app/styles/frame.scss */
+/* line 3, ../../app/styles/frame.scss */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* line 11, ../../app/styles/frame.scss */
 #top {
   height: 15vh;
   text-align: left;
   color: #8F8F8E;
 }
 
-/* line 14, ../../app/styles/frame.scss */
+/* line 19, ../../app/styles/frame.scss */
 #set-controller > div {
   float: left;
 }
-/* line 15, ../../app/styles/frame.scss */
+/* line 20, ../../app/styles/frame.scss */
 #set-controller #setSubtract {
   border-left: 1px solid #aaa;
 }
 
-/* line 21, ../../app/styles/frame.scss */
+/* line 26, ../../app/styles/frame.scss */
 #middle {
   height: 74vh;
   width: 100%;
-  overflow: hidden;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
-/* line 26, ../../app/styles/frame.scss */
+/* line 32, ../../app/styles/frame.scss */
 #middle .column-container {
   width: 160vw;
 }
-/* line 27, ../../app/styles/frame.scss */
+/* line 33, ../../app/styles/frame.scss */
 #middle .column {
   width: 48vw;
 }
 
-/* line 31, ../../app/styles/frame.scss */
+/* line 37, ../../app/styles/frame.scss */
 .column {
   float: left;
   margin-left: -1.8vw;
 }
-/* line 34, ../../app/styles/frame.scss */
+/* line 40, ../../app/styles/frame.scss */
 .column > div {
   margin: 1.8vw;
   padding-top: 5.5vh;
 }
-/* line 35, ../../app/styles/frame.scss */
+/* line 41, ../../app/styles/frame.scss */
 .column .header {
   height: 15vh;
   margin-top: 0;
   box-sizing: border-box;
 }
-/* line 40, ../../app/styles/frame.scss */
+/* line 46, ../../app/styles/frame.scss */
 .column .countdown {
   height: 52vh;
   position: relative;
 }
-/* line 43, ../../app/styles/frame.scss */
+/* line 49, ../../app/styles/frame.scss */
 .column .countdown .countdown-bar {
   position: absolute;
   left: 0;
@@ -3329,14 +3335,14 @@ button {
   top: 0;
   bottom: 2.8vw;
 }
-/* line 44, ../../app/styles/frame.scss */
+/* line 50, ../../app/styles/frame.scss */
 .column .countdown .time {
   position: absolute;
   left: 0;
   width: 100%;
 }
 
-/* line 51, ../../app/styles/frame.scss */
+/* line 57, ../../app/styles/frame.scss */
 #bottom {
   height: 10vh;
   position: absolute;
@@ -3345,21 +3351,21 @@ button {
   padding-top: 2vh;
   box-sizing: border-box;
 }
-/* line 58, ../../app/styles/frame.scss */
+/* line 64, ../../app/styles/frame.scss */
 #bottom .label {
   font-size: 7vw;
 }
 
-/* line 63, ../../app/styles/frame.scss */
+/* line 69, ../../app/styles/frame.scss */
 #set-time {
   height: 89vh;
 }
-/* line 65, ../../app/styles/frame.scss */
+/* line 71, ../../app/styles/frame.scss */
 #set-time header {
   position: relative;
   padding: 3vh 0 2vh;
 }
-/* line 69, ../../app/styles/frame.scss */
+/* line 75, ../../app/styles/frame.scss */
 #set-time header:after {
   content: '';
   position: absolute;
@@ -3369,20 +3375,20 @@ button {
   height: 2px;
   margin-left: -35vw;
 }
-/* line 78, ../../app/styles/frame.scss */
+/* line 84, ../../app/styles/frame.scss */
 #set-time header .title {
   font-size: 3.5vh;
   text-transform: uppercase;
   font-weight: 100;
   color: rgba(255, 255, 255, 0.7);
 }
-/* line 83, ../../app/styles/frame.scss */
+/* line 89, ../../app/styles/frame.scss */
 #set-time header .title em {
   color: #FFF;
   font-weight: 700;
   font-style: normal;
 }
-/* line 89, ../../app/styles/frame.scss */
+/* line 95, ../../app/styles/frame.scss */
 #set-time header #close-button {
   position: absolute;
   color: rgba(102, 102, 102, 0.5);
@@ -3394,24 +3400,24 @@ button {
   font-size: 9vw;
   text-shadow: none;
 }
-/* line 99, ../../app/styles/frame.scss */
+/* line 105, ../../app/styles/frame.scss */
 #set-time header .minute, #set-time header .seconds {
   font-size: 18vw;
   font-weight: 100;
 }
-/* line 103, ../../app/styles/frame.scss */
+/* line 109, ../../app/styles/frame.scss */
 #set-time header .minute:after {
   content: "m";
   font-size: 8vw;
 }
-/* line 107, ../../app/styles/frame.scss */
+/* line 113, ../../app/styles/frame.scss */
 #set-time header .seconds:after {
   content: "s";
   font-size: 8vw;
   margin-left: -4vw;
 }
 
-/* line 117, ../../app/styles/frame.scss */
+/* line 123, ../../app/styles/frame.scss */
 #phone-pad {
   height: 60vh;
   display: -webkit-flex;
@@ -3425,7 +3431,7 @@ button {
   -webkit-justify-content: center;
           justify-content: center;
 }
-/* line 125, ../../app/styles/frame.scss */
+/* line 131, ../../app/styles/frame.scss */
 #phone-pad span {
   -webkit-flex-basis: 30vw;
           flex-basis: 30vw;
