--- a/app/styles/frame.scss
+++ b/app/styles/frame.scss
@@ -1,5 +1,10 @@
 
 
+::-webkit-scrollbar {
+    display: none;
+}
+
+
 //  ********MAIN VIEW********
 
 // Interval Scheduler
@@ -21,7 +26,8 @@
 #middle {
     height: 74vh;
     width: 100%;
-    overflow: hidden;
+    overflow-x: scroll;
+    overflow-y: hidden;
 
     .column-container { width: 160vw;}
     .column {
