--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import "../app/styles/mediaqueries.scss";
 
 
+html { height: 100%; }
 body {
     padding: 0;
     margin: 0;
