--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="middle">
-        <div class="column-container">
+        <!-- <div class="column-container">
             <div class="column-container">
                 <div class="column warm-up">
                     <div class="header">
@@ -26,8 +26,8 @@
                     </div>
                 </div>
             </div>
-
-        </div>
+        </div> -->
+        <interval-set config="intervalConfig" intervals="intervalNum" running="isRunning"></interval-set>
     </div>
 
     <div id="bottom" class="goslow">
