--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -3253,18 +3253,23 @@
 }
 
 /* line 1, ../../app/styles/_base.scss */
+* {
+  box-sizing: border-box;
+}
+
+/* line 4, ../../app/styles/_base.scss */
 body {
   background: #1B1B1B;
   color: #efefef;
   font-family: helvetica, arial, san-serif;
 }
-/* line 5, ../../app/styles/_base.scss */
+/* line 8, ../../app/styles/_base.scss */
 body a {
   color: #eee;
   text-decoration: none;
 }
 
-/* line 9, ../../app/styles/_base.scss */
+/* line 12, ../../app/styles/_base.scss */
 button {
   background: #818181;
 }
@@ -3308,50 +3313,51 @@ button {
 }
 /* line 37, ../../app/styles/_frame.scss */
 #middle .column-container {
-  width: 160vw;
+  display: -webkit-flex;
+  display: flex;
 }
-/* line 38, ../../app/styles/_frame.scss */
+/* line 41, ../../app/styles/_frame.scss */
 #middle .column {
-  width: 48vw;
+  -webkit-flex: 0 0 48vw;
+          flex: 0 0 48vw;
 }
 
-/* line 42, ../../app/styles/_frame.scss */
+/* line 45, ../../app/styles/_frame.scss */
 .column {
-  float: left;
   margin-left: -1vh;
 }
-/* line 45, ../../app/styles/_frame.scss */
+/* line 48, ../../app/styles/_frame.scss */
 .column > div {
   margin: 1vh;
   padding-top: 5.5vh;
 }
-/* line 46, ../../app/styles/_frame.scss */
+/* line 49, ../../app/styles/_frame.scss */
 .column .header {
   height: 15vh;
   margin-top: 0;
   box-sizing: border-box;
 }
-/* line 51, ../../app/styles/_frame.scss */
+/* line 54, ../../app/styles/_frame.scss */
 .column .countdown {
   height: 52.5vh;
   position: relative;
 }
-/* line 54, ../../app/styles/_frame.scss */
+/* line 57, ../../app/styles/_frame.scss */
 .column .countdown .countdown-bar {
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
-  bottom: 2.8vw;
+  bottom: 2%;
 }
-/* line 55, ../../app/styles/_frame.scss */
+/* line 58, ../../app/styles/_frame.scss */
 .column .countdown .time {
   position: absolute;
   left: 0;
   width: 100%;
 }
 
-/* line 62, ../../app/styles/_frame.scss */
+/* line 65, ../../app/styles/_frame.scss */
 #bottom {
   height: 10vh;
   width: 100%;
@@ -3359,7 +3365,7 @@ button {
   display: -webkit-flex;
   display: flex;
 }
-/* line 67, ../../app/styles/_frame.scss */
+/* line 70, ../../app/styles/_frame.scss */
 #bottom .label {
   font-size: 7vw;
   -webkit-align-self: center;
@@ -3368,16 +3374,16 @@ button {
           flex: 1;
 }
 
-/* line 72, ../../app/styles/_frame.scss */
+/* line 75, ../../app/styles/_frame.scss */
 #set-time {
   height: 84vh;
 }
-/* line 74, ../../app/styles/_frame.scss */
+/* line 77, ../../app/styles/_frame.scss */
 #set-time header {
   position: relative;
   padding: 3vh 0 2vh;
 }
-/* line 78, ../../app/styles/_frame.scss */
+/* line 81, ../../app/styles/_frame.scss */
 #set-time header:after {
   content: '';
   position: absolute;
@@ -3387,20 +3393,20 @@ button {
   height: 2px;
   margin-left: -35vw;
 }
-/* line 87, ../../app/styles/_frame.scss */
+/* line 90, ../../app/styles/_frame.scss */
 #set-time header .title {
   font-size: 3.5vh;
   text-transform: uppercase;
   font-weight: 100;
   color: rgba(255, 255, 255, 0.7);
 }
-/* line 92, ../../app/styles/_frame.scss */
+/* line 95, ../../app/styles/_frame.scss */
 #set-time header .title em {
   color: #FFF;
   font-weight: 700;
   font-style: normal;
 }
-/* line 98, ../../app/styles/_frame.scss */
+/* line 101, ../../app/styles/_frame.scss */
 #set-time header #close-button {
   position: absolute;
   color: rgba(102, 102, 102, 0.5);
@@ -3412,24 +3418,24 @@ button {
   font-size: 9vw;
   text-shadow: none;
 }
-/* line 108, ../../app/styles/_frame.scss */
+/* line 111, ../../app/styles/_frame.scss */
 #set-time header .minute, #set-time header .seconds {
   font-size: 18vw;
   font-weight: 100;
 }
-/* line 112, ../../app/styles/_frame.scss */
+/* line 115, ../../app/styles/_frame.scss */
 #set-time header .minute:after {
   content: "m";
   font-size: 8vw;
 }
-/* line 116, ../../app/styles/_frame.scss */
+/* line 119, ../../app/styles/_frame.scss */
 #set-time header .seconds:after {
   content: "s";
   font-size: 8vw;
   margin-left: -4vw;
 }
 
-/* line 126, ../../app/styles/_frame.scss */
+/* line 129, ../../app/styles/_frame.scss */
 #phone-pad {
   height: 60vh;
   display: -webkit-flex;
@@ -3443,7 +3449,7 @@ button {
   -webkit-justify-content: center;
           justify-content: center;
 }
-/* line 134, ../../app/styles/_frame.scss */
+/* line 137, ../../app/styles/_frame.scss */
 #phone-pad span {
   -webkit-flex-basis: 30vw;
           flex-basis: 30vw;
@@ -3464,9 +3470,9 @@ button {
 /* line 25, ../../app/styles/_variables.scss */
 .warm-up .countdown, .cool-down .countdown {
   background: #0F6443;
-  box-shadow: inset -1.4vw 0 0 #00C578, inset 1.4vw 0 0 #00C578, inset 0 -1.4vw 0 #00C578, inset 0 1.4vw 0 #00C578;
+  border: 1.4vw solid #00C578;
 }
-/* line 28, ../../app/styles/_variables.scss */
+/* line 29, ../../app/styles/_variables.scss */
 .warm-up .countdown .countdown-bar, .cool-down .countdown .countdown-bar {
   background: -webkit-linear-gradient(#08A886, #00C578);
 }
@@ -3486,9 +3492,9 @@ button {
 /* line 25, ../../app/styles/_variables.scss */
 .speedup .countdown {
   background: #796D1E;
-  box-shadow: inset -1.4vw 0 0 #F6D922, inset 1.4vw 0 0 #F6D922, inset 0 -1.4vw 0 #F6D922, inset 0 1.4vw 0 #F6D922;
+  border: 1.4vw solid #F6D922;
 }
-/* line 28, ../../app/styles/_variables.scss */
+/* line 29, ../../app/styles/_variables.scss */
 .speedup .countdown .countdown-bar {
   background: -webkit-linear-gradient(#F3B217, #F6D922);
 }
@@ -3508,9 +3514,9 @@ button {
 /* line 25, ../../app/styles/_variables.scss */
 .slowdown .countdown {
   background: #0F6375;
-  box-shadow: inset -1.4vw 0 0 #00C3EC, inset 1.4vw 0 0 #00C3EC, inset 0 -1.4vw 0 #00C3EC, inset 0 1.4vw 0 #00C3EC;
+  border: 1.4vw solid #00C3EC;
 }
-/* line 28, ../../app/styles/_variables.scss */
+/* line 29, ../../app/styles/_variables.scss */
 .slowdown .countdown .countdown-bar {
   background: -webkit-linear-gradient(#108ED1, #00C3EC);
 }
