--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -24,7 +24,7 @@ $innerBorder: 1.4vw;
      }
     .countdown {
     background: #{$darker};
-    border: $innerBorder solid #{$lighter};
+    border: $innerBorder solid #{$base};
     // box-shadow: inset (-$innerBorder) 0 0 #{$lighter}, inset $innerBorder 0 0 #{$lighter}, inset 0 (-$innerBorder) 0 #{$lighter}, inset 0 $innerBorder 0 #{$lighter};
     .countdown-bar { background: -webkit-linear-gradient($base,$lighter); }
     }
